<resources>
    <string name="app_name">StopWatch App</string>
    <string name="stop_watch">Stop Watch</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="_00_00_00">00:00:00:00</string>
    <string name="count_time">Count Time</string>
    <string name="set_timer">Set Timer</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="set_time">Set Time</string>
    <string name="_00_00">00:00</string>
</resources>