<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#160202">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="66dp"
        android:gravity="center"
        android:text="@string/stop_watch"
        android:textColor="#24E60B"
        android:textColorLink="#41BDA1"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="235dp"
        android:layout_height="0dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="360dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title"
        app:srcCompat="@drawable/watch_pic"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/setTimer"
        android:layout_width="123dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="28dp"
        android:text="@string/set_timer"
        app:layout_constraintBottom_toTopOf="@+id/countTime"
        app:layout_constraintStart_toStartOf="@+id/countTime" />

    <Button
        android:id="@+id/countTime"
        android:layout_width="128dp"
        android:layout_height="53dp"
        android:layout_marginBottom="152dp"
        android:text="@string/count_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>